force-app/main/default/objects/AttendanceLineItem__c/AttendanceLineItem__c.object-meta.xml
<CustomObject>
    <label>Attendance Line Item</label>
    <nameField>
        <displayFormat>ALI-{0000}</displayFormat>
        <label>Attendance Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attendance Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>