force-app/main/default/objects/AttendanceLineItem__c/fields/Absent__c.field-meta.xml
<CustomField>
    <fullName>Absent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Absent</label>
    <type>Checkbox</type>
</CustomField>