force-app/main/default/objects/AttendanceLineItem__c/fields/ClassEnrollment__c.field-meta.xml
<CustomField>
    <fullName>ClassEnrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Class Enrollment</label>
    <referenceTo>ClassEnrollment__c</referenceTo>
    <relationshipLabel>Attendance Line Items</relationshipLabel>
    <relationshipName>AttendanceLineItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>