force-app/main/default/objects/AttendanceLineItem__c/fields/Excused__c.field-meta.xml
<CustomField>
    <fullName>Excused__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Excused</label>
    <type>Checkbox</type>
</CustomField>