force-app/main/default/objects/AttendanceLineItem__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Attendance Line Items</relationshipLabel>
    <relationshipName>AttendanceLineItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>